Fixes issue with background overflow showing when scrolling

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
   height: 100vh;
 
   background-position: center;
+
+  overflow: hidden;
 }
 
 h1, h2 {
